--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -14,18 +14,15 @@
         <!-- Navigation bar -->
         <div>
             <ul class="navbar">
-                <li><a class="active" href="{ % urls index %}">Home</a></li>
-                <li><a href="product-list.html">Products</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="cart.html"><i class="fa-regular fa-bag-shopping"></i></a></li>
+                <li><a class="active" href="{ % urls index % }">Home</a></li>
+                {% for c in categories %}
+                <li><a href="">{{ c.name|title }}</title></a></li>
+                {% endfor %}
             </ul>
         </div>
         <div class="icons">
             <a href="#"><i class='bx bx-user'></i></a>
-            <a href="#"><i class='bx bx-heart'></i></a>
-            <a href="#"><i class='bx bx-cart'></i></a>
+            <a href="cart"><i class='bx bx-cart'></i><span>0</span></a>
         </div>
     </header>
 
@@ -61,7 +58,7 @@
     </footer>
     <script src="{% static '../static/assets/js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static '../static/assets/js/cart.js' %}"></script>
-    <script src="{% static 'assets/js/slider.js' %}"></script>
+    <script src="{% static 'assets/js/product.js' %}"></script>
     <script src="{% static 'assets/js/index.js' %}"></script>
 </body> 
 </html>
