--- a/templates/soko/cart_summary.html
+++ b/templates/soko/cart_summary.html
@@ -12,7 +12,11 @@
 
     <!-- Product #1 -->
 
-
 </div>
+<div class="total">
+    Total: $<span id="total-price-sum">0.00</span>
+</div>
+
+<button id="clear-cart">Clear Cart</button>
 
 {% endblock content %}
