--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -16,7 +16,7 @@
             <ul class="navbar">
                 <li><a class="active" href="{ % urls index % }">Home</a></li>
                 {% for c in categories %}
-                <li><a href="">{{ c.name|title }}</title></a></li>
+                <li><a href="{{ c.get_absolute_url }}">{{ c.name|title }}</title></a></li>
                 {% endfor %}
             </ul>
         </div>
