--- a/templates/soko/category.html
+++ b/templates/soko/category.html
@@ -11,7 +11,9 @@
         <div class="main-promo">
             <h2>SPECIAL OFFER</h2>
             <h1>UP TO 50% OFF</h1>
-            <button>SHOP NOW</button>
+            <div class="shop-now">
+                <button>SHOP NOW</button>
+            </div>
             <h3>LIMITED TIME ONLY</h3>
         </div>
     </section>
